[package]
name = "iter_variants_derive"
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/jonathandw743/iter_variants"
homepage = "https://github.com/jonathandw743/iter_variants"
description = "Derive macros for iterating over all variants of a rust struct/enum"

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"

[lib]
proc-macro = true
